fluent-syntax/test/fixtures_behavior/section-with-one-bracket-at-the-end.ftl
[[ This is a broken section ]
//~ ERROR E0003, pos 29, args "]"
